[package]
name = "phantom-secret"
description = "Easy to Convert Your Phantom Wallet Private Key to Solana Json Key File."
version = "0.1.2"
authors = ["kindsecret"]
edition = "2021"
license = "Apache-2.0"
keywords = ["Phantom", "Secret", "Pubkey", "Privatekey", "Json"]

[[bin]]
name = "phantom"
path = "src/main.rs"

[dependencies]
bs58 = "0.4.0"
console = "0.15.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
